--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/style.css
@@ -130,6 +130,24 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+.filtre {
+	display: flex;
+	justify-content: center;
+}
+.btn {
+	border-radius: 20px;
+	border:1px solid #1D6154;
+	font-family: 'syne';
+	color: #1D6154;
+	width: 15em;
+	height: 3em;
+	margin: 1%;
+	margin-bottom: 5%;
+}
+.btn:hover {
+	background-color: #1D6154;
+	color: white;
+}
 .gallery {
 	width: 100%;
 	display: grid;
