Résolution conflit css entre btn de l'index et btn de login devenu btnLogin

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/login.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/login.css
@@ -24,7 +24,7 @@ input {
     margin-top: 7%;
     margin-bottom: 8%;
 }
-.btn {
+.btnLogin {
     display: flex;
     flex-direction: column;
     align-items: center;
