--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
@@ -9,6 +9,15 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
+    animation: fadeIn .5s both;
+}
+
+.modale[aria-hidden="true"] {
+    animation-name: fadeOut;
+}
+
+.modale[aria-hidden="true"] .modale-wrapper {
+    animation-name: slideFromBottom;
 }
 
 .modale-wrapper {
@@ -18,6 +27,7 @@
     padding: 20px;
     background-color: white;
     overflow: auto;
+    animation: slideFromTop .5s both;
 }
 
 .modaleGallery {
@@ -30,4 +40,24 @@
 
 .modaleGallery img {
     width: 100%;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0;}
+    to { opacity: 1;}
+}
+
+@keyframes slideFromTop {
+    from { transform: translateY(-50px);}
+    to { transform: translateY(0px);}
+}
+
+@keyframes fadeOut {
+    from { opacity: 1;}
+    to { opacity: 0;}
+}
+
+@keyframes slideFromBottom {
+    from { transform: translateY(0px);}
+    to { transform: translateY(50px);}
 }
