Début fonction isAdmin

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
@@ -42,6 +42,12 @@
     width: 100%;
 }
 
+.modaleForm {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 @keyframes fadeIn {
     from { opacity: 0;}
     to { opacity: 1;}
