Mise en forme des boutons de suppression, et début de mise en forme pour la partie d'ajout de photos

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
@@ -65,14 +65,31 @@
     margin-bottom: 2em;
 }
 
+.carteImage {
+    position: relative;
+}
+
 .modaleGallery img {
     width: 100%;
+    z-index: 2;
+}
+
+.imgDelete {
+    border: none;
+    z-index: 1;
+    position: absolute;
 }
 
 .modaleForm {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    max-width: 300px;
+}
+
+.modal-retour {
+    border: none;
+    background-color: white;
 }
 
 .menuModale1 {
