--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/style.css
@@ -92,6 +92,7 @@ h2, h3, h4{
 nav ul {
 	display: flex;
 	align-items: center;
+	justify-content: space-around;
 	list-style-type: none;
 
 }
@@ -129,6 +130,13 @@ li:hover {
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
+}
+.imgIntro {
+	display: flex;
+	flex-direction: column;
+}
+.imgIntro a {
+	margin-left: 11%;
 }
 .filtre {
 	display: flex;
