Correction du style CSS de la partie contact de l'index

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/style.css
@@ -194,6 +194,8 @@ margin: auto;
 }
 #contact label {
 	margin: 2em 0 1em 0;
+	width: 100%;
+	justify-content: left;
 }
 #contact textarea {
 	border: none;
