--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
@@ -1,182 +1,210 @@
 .modale {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    animation: fadeIn .5s both;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  animation: fadeIn 0.5s both;
 }
 
 .js-modal-close {
-    border: none;
-    width: 100%;
-    height: 1em;
-    color: black;
-    background-color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
+  border: none;
+  width: 100%;
+  height: 1em;
+  color: black;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
 }
 
 .fa-xmark {
-    font-size: 1.2em;
+  font-size: 1.2em;
 }
 
 .titleModale {
-    display: flex;
-    justify-content: center;
-    font-family: 'Syne';
-	font-weight: 200;
-	font-size: 25px;
-    color: black;
+  display: flex;
+  justify-content: center;
+  font-family: "Syne";
+  font-weight: 200;
+  font-size: 25px;
+  color: black;
 }
 
 .modale[aria-hidden="true"] {
-    animation-name: fadeOut;
+  animation-name: fadeOut;
 }
 
 .modale[aria-hidden="true"] .modale-wrapper {
-    animation-name: slideFromBottom;
+  animation-name: slideFromBottom;
 }
 
 .modale-wrapper {
-    width: 500px;
-    max-width: calc(100vw - 20px);
-    max-height: calc(100vh - 20px);
-    padding: 20px;
-    background-color: white;
-    overflow: auto;
-    animation: slideFromTop .5s both;
+  width: 500px;
+  max-width: calc(100vw - 20px);
+  max-height: calc(100vh - 20px);
+  padding: 20px;
+  background-color: white;
+  overflow: auto;
+  animation: slideFromTop 0.5s both;
 }
 
 .modaleGallery {
-    width: 100%;
-	display: grid;
-	grid-template-columns: 6em 6em 6em 6em 6em;
-	grid-column-gap: 10px;
-	grid-row-gap: 10px;
-    justify-content: center;
-    margin-top: 2em;
-    margin-bottom: 2em;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 6em 6em 6em 6em 6em;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  justify-content: center;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 .carteImage {
-    position: relative;
+  position: relative;
 }
 
 .modaleGallery img {
-    width: 100%;
-    z-index: 2;
+  width: 100%;
+  z-index: 2;
 }
 
 .imgDelete {
-    border: none;
-    z-index: 1;
-    position: absolute;
+  border: none;
+  border-radius: 5px;
+  z-index: 1;
+  position: absolute;
+  background-color: black;
+  width: 25px;
+  height: 25px;
+  margin-top: 1%;
+  transform: translate(220%);
+}
+
+.fa-trash-can {
+  color: white;
 }
 
 .modaleForm {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
-.modaleForm input, label, select {
-    display: flex;
-    justify-content: center;
-    height: 20px;
-    font-size: 1.2em;
-    width: 80%;
-    margin: 2%;
-    background-color: white;
-    border: none;
+.modaleForm input,
+label,
+select {
+  display: flex;
+  justify-content: center;
+  height: 20px;
+  font-size: 1.2em;
+  width: 80%;
+  margin: 2%;
+  background-color: white;
+  border: none;
 }
 
 .modaleFormMainTitle {
-    font-weight: 200;
-    font-size: 25px;
-    color: black;
-    margin: 5%;
+  font-weight: 200;
+  font-size: 25px;
+  color: black;
+  margin: 5%;
 }
 
 .modaleFormTitle {
-    justify-content: left;
+  justify-content: left;
 }
 
 #file {
-    height: 200px;
-    width: 80%;
+  height: 200px;
+  width: 80%;
 }
 
 .modaleForm div {
-    width: 80%;
-    border-top: solid  1px grey;
-    display: flex;
-    justify-content: center;
-    margin: 2%;
+  width: 80%;
+  border-top: solid 1px grey;
+  display: flex;
+  justify-content: center;
+  margin: 2%;
 }
 
 .modaleForm button {
-    width: 50%;
-    height: 3em;
-    border-radius: 20px;
-    background-color: grey;
-    color: white;
-    margin: 5%;
+  width: 50%;
+  height: 3em;
+  border-radius: 20px;
+  background-color: grey;
+  color: white;
+  margin: 5%;
 }
 
 .modaleForm button:hover {
-    background-color: #1D6154;
+  background-color: #1d6154;
 }
 
 .modal-retour {
-    border: none;
-    background-color: white;
+  border: none;
+  background-color: white;
 }
 
 .menuModale1 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .ajouterPhotos {
-    background-color: #1D6154;
-    color: white;
-    width: 55%;
-    height: 3em;
-    border-radius: 20px;
-    margin-bottom: 2%;
+  background-color: #1d6154;
+  color: white;
+  width: 55%;
+  height: 3em;
+  border-radius: 20px;
+  margin-bottom: 2%;
 }
 
 .supprimerGalerie {
-    border: 0;
-    color: red;
-    background-color: white;
+  border: 0;
+  color: red;
+  background-color: white;
 }
 
 @keyframes fadeIn {
-    from { opacity: 0;}
-    to { opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes slideFromTop {
-    from { transform: translateY(-50px);}
-    to { transform: translateY(0px);}
+  from {
+    transform: translateY(-50px);
+  }
+  to {
+    transform: translateY(0px);
+  }
 }
 
 @keyframes fadeOut {
-    from { opacity: 1;}
-    to { opacity: 0;}
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
 
 @keyframes slideFromBottom {
-    from { transform: translateY(0px);}
-    to { transform: translateY(50px);}
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(50px);
+  }
 }
