--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
@@ -121,9 +121,11 @@ select {
   justify-content: left;
 }
 
-#file {
-  height: 200px;
+input#image {
+  height: 50px;
   width: 80%;
+  display: flex;
+  flex-direction: column;
 }
 
 .modaleForm div {
@@ -134,17 +136,13 @@ select {
   margin: 2%;
 }
 
-.modaleForm button {
+#btnAjoutPhoto {
   width: 50%;
   height: 3em;
   border-radius: 20px;
   background-color: grey;
   color: white;
   margin: 5%;
-}
-
-.modaleForm button:hover {
-  background-color: #1d6154;
 }
 
 .modalNav {
@@ -176,12 +174,14 @@ select {
   height: 3em;
   border-radius: 20px;
   margin-bottom: 2%;
+  cursor: pointer;
 }
 
 .supprimerGalerie {
   border: 0;
   color: red;
   background-color: white;
+  cursor: pointer;
 }
 
 @keyframes fadeIn {
