--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
@@ -65,19 +65,19 @@
   margin-bottom: 2em;
 }
 
-.carteImage {
+.CarteImage {
   position: relative;
+  z-index: 1;
 }
 
 .modaleGallery img {
   width: 100%;
-  z-index: 2;
 }
 
 .imgDelete {
   border: none;
   border-radius: 5px;
-  z-index: 1;
+  z-index: 2;
   position: absolute;
   background-color: black;
   width: 25px;
@@ -86,7 +86,20 @@
   transform: translate(220%);
 }
 
-.fa-trash-can {
+.imgMove {
+  border: none;
+  border-radius: 5px;
+  z-index: 3;
+  position: absolute;
+  background-color: black;
+  width: 25px;
+  height: 25px;
+  margin-top: 1%;
+  transform: translate(110%);
+}
+
+.fa-trash-can,
+.fa-arrows-up-down-left-right {
   color: white;
 }
 
