Mise en forme de la modale pour ajouter des photos

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/style.css
@@ -304,6 +304,7 @@ footer nav ul {
   flex-direction: row;
   align-items: baseline;
   justify-content: center;
+  margin-bottom: 0;
 }
 
 .btnAdmin {
