--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/modale.css
@@ -55,10 +55,14 @@
   animation: slideFromTop 0.5s both;
 }
 
+.js-modale {
+  margin: 2%;
+}
+
 .modaleGallery {
   width: 100%;
   display: grid;
-  grid-template-columns: 6em 6em 6em 6em 6em;
+  grid-template-columns: 5em 5em 5em 5em 5em;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   justify-content: center;
@@ -81,10 +85,10 @@
   z-index: 2;
   position: absolute;
   background-color: black;
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   margin-top: 1%;
-  transform: translate(220%);
+  transform: translate(230%);
 }
 
 .imgMove {
@@ -93,10 +97,10 @@
   z-index: 3;
   position: absolute;
   background-color: black;
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   margin-top: 1%;
-  transform: translate(110%);
+  transform: translate(115%);
 }
 
 .fa-trash-can,
@@ -104,11 +108,17 @@
   color: white;
 }
 
+.editButton {
+  border: none;
+  cursor: pointer;
+}
+
 .modaleForm {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  justify-content: center;
+  margin: 5%;
 }
 
 .modaleForm input,
@@ -128,11 +138,31 @@ select {
   justify-content: left;
 }
 
+.fa-image {
+  font-size: 5em;
+  color: #b9c5cc;
+  margin-top: 10%;
+}
+
+.selectPicture {
+  background-color: #e8f1f6;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5%;
+}
+
 .modaleFormMainTitle {
-  font-weight: 200;
+  display: flex;
+  align-items: center;
+  width: 40%;
+  height: 2em;
   color: #306685;
-  margin-top: 15%;
+  margin-top: 5%;
   cursor: pointer;
+  background-color: #cbd6dc;
+  border-radius: 20px;
 }
 
 input[type="file"] {
@@ -152,21 +182,22 @@ input#image {
   align-items: center;
 }
 
-.modaleForm div {
+.modaleForm2 {
   width: 80%;
-  border-top: solid 1px grey;
+  border-top: solid 1px #b3b3b3;
   display: flex;
   justify-content: center;
-  margin: 2%;
+  margin-top: 2em;
+  padding-top: 2em;
 }
 
 #btnAjoutPhoto {
   width: 50%;
   height: 3em;
+  border: none;
   border-radius: 20px;
   background-color: grey;
   color: white;
-  margin: 5%;
 }
 
 .modalNav {
@@ -185,18 +216,22 @@ input#image {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-top: solid 1px #b3b3b3;
+  margin: 10%;
+  margin-bottom: 1em;
 }
 
 #image-preview {
-  width: 35%;
+  width: 45%;
   display: flex;
   justify-content: center;
+  margin: 5%;
 }
 
 .ajouterPhotos {
-  margin-top: 5em;
+  margin: 2em;
   background-color: #1d6154;
-  font-size: 15px;
+  font-family: "Syne";
   color: white;
   width: 55%;
   height: 3em;
@@ -207,7 +242,9 @@ input#image {
 }
 
 .supprimerGalerie {
+  margin: 1em;
   border: 0;
+  font-family: "Syne";
   color: red;
   background-color: white;
   cursor: pointer;
