--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/login.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/login.css
@@ -1,50 +1,54 @@
 .containerLogin {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-top: 20%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 20%;
 }
 .cardLogin h2 {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .cardLogin form {
-    display: flex;
-    flex-direction: column;
-    padding-top: 10%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 10%;
 }
 .cardLogin a {
-    font-family: 'Syne';
-    font-weight: 200;
+  font-family: "Syne";
+  font-weight: 200;
 }
 input {
-    border: none;
-    width: 20em;
-    height: 2em;
-    margin-top: 7%;
-    margin-bottom: 8%;
+  border: none;
+  width: 20em;
+  height: 2em;
+  margin-top: 7%;
+  margin-bottom: 8%;
 }
 .btnLogin {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .seConnecter {
-    background-color: #1D6154;
-    color: white;
-    width: 75%;
-    height: 3em;
-    border-radius: 20px;
-    margin-bottom: 10%;
+  background-color: #1d6154;
+  border: none;
+  color: white;
+  width: 75%;
+  height: 3em;
+  border-radius: 20px;
+  margin-bottom: 10%;
+  cursor: pointer;
 }
 .containerMdpOublie {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .mdpOublie {
-    width: 75%;
-    border: none;
+  width: 75%;
+  border: none;
+  background-color: white;
+  cursor: pointer;
 }
 li:hover {
-    color: #1D6154;
-  }
+  color: #1d6154;
+}
