Suppression de l'utilisation de cookie, mise en place de message d'erreur dans login.js & handlePictureSubmit.js

--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/login.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/login.css
@@ -49,6 +49,18 @@ input {
   background-color: white;
   cursor: pointer;
 }
+.emptyMsg {
+  color: red;
+  margin: 7%;
+  display: none;
+  width: 20em;
+}
+.errorMsg {
+  color: red;
+  margin: 7%;
+  display: none;
+  width: 20em;
+}
 li:hover {
   color: #1d6154;
 }
